app/app.css
/* html */

html,
body {
  margin: 0;
  padding: 0;
}

/* dropdown */

.dropdown {
  border: 10px solid black;
  padding: 10px;
}

.dropdown .dropdown-label {
  font-weight: bold;
  text-decoration: underline;
  cursor: pointer;
  user-select: none;
}

.dropdown .dropdown-items {}

.dropdown .dropdown-item {}

.hidden {
  display: none;
}

/* editor */

.editor {
  margin: 0;
  padding: 0;
  width: 100vw;
  height: 100vh;

  font-family: 'Courier New', Courier, monospace;
  /* font-family: Verdana, Tahoma, sans-serif; */

  font-size: 12pt;

  user-select: none;
}

/* menu */

.menu {
  margin: 0;
  padding: 6px;
  padding-bottom: 0;

  font-size: 10pt;

  background-color: rgb(21, 33, 58);
  color: white
}

.menu-title,
.menu-item {
  display: inline-block;
  vertical-align: center;
  text-align: left;
  margin-bottom: 6px;
}

.menu-title,
.menu-item-title {
  padding: 2px 6px;
  border-radius: 10px 2px / 10px;
}

.menu-title {
  font-weight: bold;
  border-collapse: collapse;

  background-color: rgb(255, 199, 94);
  color: black;
}

.menu-item {
  display: inline-block;
  margin-left: 10px;

  color: black;
}

.menu-item-title {
  display: inline-block;
  cursor: pointer;

  background-color: tan;
}

.menu-item-title:hover,
.menu-item.open>.menu-item-title {
  background-color: rgb(255, 199, 94);
}


.menu-item-options {
  position: absolute;

  border-radius: 10px 2px / 10px;
  margin-top: 4px;

  background-color: tan;
  color: black;
}

.menu-item.open>.menu-item-options {
  box-shadow: 0 0 4px 1px black;
}

.menu-item.closed>.menu-item-options {
  display: none;
}

.menu-item-option {
  padding: 2px;
  border-radius: 10px 2px / 10px;
  cursor: pointer;
}

.menu-item-option:hover {
  background-color: rgb(255, 199, 94);
}

/* program */

.program {
  display: block;
  margin: 10px 10px;
  padding: 10px;
  font-size: 12pt;
  line-height: 18px;

  vertical-align: center;
}


/* syntax */

.syntax {
  display: inline;
  /* border-radius: 10px 2px / 10px; */
  border-radius: 4px;
}

.term {}

.term-var {
  /* padding: 0 2px; */
  color: rgb(0, 82, 0);
}

.term-lam {}

.term-app {}

.term-let {}

.term-hole>.hole {
  display: inline;
  font-weight: bold;
  color: red;
  box-shadow: 0 0 0 2px red inset;
  padding: 0 4px;
  margin: 0 2px;
  border-radius: 74% 26% 73% 27% / 26% 74% 26% 74%;
}

.bind {
  padding: 0 2px;
  color: rgb(0, 82, 0);
}

.bind-empty {}

.cursor {
  border-radius: 4px;
  display: inline;
  box-shadow: -2px 0 0 blue, 2px 0 0 blue;
}

.cursor {
  /* background-color: rgb(216, 216, 255); */
}


/* select */

.selectStart,
.selectEnd {
  border-radius: 4px;
  display: inline;
  /* box-shadow: -2px 0 0 orange, 2px 0 0 orange; */
  box-shadow: -2px 0 0 blue, 2px 0 0 blue;
}


.selectStart {
  /* background-color: rgb(255, 233, 194); */
  background-color: rgb(216, 216, 255);
  /* box-decoration-break: clone; */
}


.selectEnd {
  background-color: white;
  /* box-decoration-break: clone; */
}

/* token */

.token {
  display: inline-block;
  white-space: pre;
}

.token.keyword {
  font-weight: bold;
}

.token.keyword-mapsto {
  padding: 0 6px;
}

.token.keyword-lambda {}

.token.keyword-plus {
  padding: 0 6px;
}

.token.punc {
  /* font-weight: lighter; */
  color: rgb(160, 196, 178);
}

.token.punc.appHandle {}

.token.punc.aplHandle {}

.token.emoji {
  /* background-color: black; */
  /* font-size: 200%; */
}

/* indentation */

.indentation {
  white-space: pre;
  display: inline-block;
}

/* query */


@keyframes scroll-background {
  0% {
    background-position: 0% 0%;
  }

  100% {
    background-position: 100% 0%;
  }
}


.query-output {
  display: inline;
  border-radius: 4px;
  padding: 0 6px;

  background: linear-gradient(45deg,
      #CC99C9,
      #9EC1CF,
      #9EE09E,
      #FDFD97,
      #FEB144,
      #FF6663,
      #FEB144,
      #FDFD97,
      #9EE09E,
      #9EC1CF,
      #CC99C9,
      #9EC1CF,
      #9EE09E);
  background-size: 1100% 100%;

  animation-name: scroll-background;
  animation-duration: 4s;
  animation-play-state: running;
  animation-iteration-count: infinite;
  animation-direction: normal;
  animation-timing-function: linear;
}

.query-output-term-new {
  display: inline;
  font-style: italic;
}

.query-output-term-old {
  display: inline;
  /* background-color: rgb(172, 172, 172); */

  /* background-image:
    linear-gradient(45deg, #808080 25%, white 25%),
    linear-gradient(-45deg, #808080 25%, white 25%),
    linear-gradient(45deg, white 75%, #808080 75%),
    linear-gradient(-45deg, white 75%, #808080 75%); */
  /* background-size: 5px 5px; */
  /* background-position: 0 0, 0 10px, 10px -10px, -10px 0px; */

  /* gray-gray stripes */
  /* background: linear-gradient(90deg, rgb(167, 167, 167) 4px, rgb(189, 189, 189) 4px);
  background-size: 8px 100%;
  background-repeat: repeat; */

  background: rgb(158, 158, 158);

  border-radius: 4px;
  margin-left: 4px;
  padding: 0 4px;
}

.query-output-path {
  display: inline;
}

.query-output-path-term {
  display: inline;
  background-color: white;
  border-radius: 4px;
  box-shadow: -2px 0 0 blue, 2px 0 0 blue;
}

/* footer */

.footer {
  margin: 0;
  width: 100vw;
  position: fixed;
  bottom: 0;
}

/* popout */

.popout {
  padding: 10px;
  overflow-y: hidden;
}

.popout-item {
  padding-top: 0;
  margin-top: 10px;
  border-radius: 6px;
  font-size: 12pt;

  box-shadow: 0 0 4px 1px black;
  background-color: tan;
}

.popout-item-clear {
  display: inline-block;
  padding: 0 4px;
  border-radius: 6px;
  margin-right: 6px;

  font-style: normal;
  cursor: pointer;
  color: black;
  background-color: white;
}

.popout-item-label {
  padding: 4px;

  border-radius: 6px;
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;

  font-size: 8pt;

  background-color: rgb(21, 33, 58);
  color: white;
}

.popout-item-body {
  padding: 10px;
}

.popout-item-clear:hover {
  background-color: rgb(149, 0, 0);
  color: white;
}

.docs {
  max-height: 40vh;
  overflow-y: scroll;

  font-size: 80%;
  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

.docs .code {
  font-family: 'Courier New', Courier, monospace;
  /* font-family: Verdana, Tahoma, sans-serif; */
}

.docs .codeblock {
  white-space: pre;
  margin-top: 10px;
  margin-bottom: 10px;
  padding: 5px;
  background-color: white;
  border-radius: 10px 2px / 10px;
}

/* clipboard */

.clipboard-value {
  display: inline-block;
  padding: 5px;
  border-radius: 10px 2px / 10px;
  box-shadow: 0 0 4px 1px black;
  /* border: 1px solid tan; */
  background-color: rgb(255, 238, 215);
}

.clipboard-clasp {
  display: inline-block;
  width: 10pt;
  height: 10pt;
  vertical-align: middle;
  box-shadow:
    /* 0 0 0 1px rgb(247, 215, 172) inset, */
    0 0 4px 1px black inset;
  border-radius: 74% 26% 73% 27% / 26% 74% 26% 74%;
  /* background-color: white; */
  background-color: tan;
}

/* console */

.console {
  margin: 0;
  padding: 10px;
  width: calc(100% - 20px);

  box-shadow: 0 -1px 0 0 tan;
  background-color: rgb(21, 33, 58);

  font-size: 8pt;
}

.console-item {
  display: inline-block;
}

.console-icon {
  display: inline-block;
  vertical-align: top;
  padding: 5px 8px;
  background-color: white;
  border-radius: 10px 2px / 10px;
  margin-right: 10px;
  font-weight: bold;
}

.console-icon-info {
  background-color: orange;
}

.console-icon-log {
  background-color: rgb(246, 229, 205);
}

.console-icon-error {
  background-color: rgb(225, 61, 61);
}

.console-item-body {
  display: inline-block;
  padding: 5px;
  max-width: calc(100vw - 20px - 50px);
  overflow-x: scroll;
  white-space: pre;

  border-radius: 10px 2px / 10px;
}

.console-item-body-info {
  background-color: rgb(255, 199, 94);
}

.console-item-body-log {
  background-color: tan;
}

.console-item-body-error {
  background-color: rgb(255, 94, 94);
}

